@@ -24,7 +24,7 @@ end
 
 class LogController < OSX::NSObject
   include OSX
-  attr_accessor :world, :menu, :max_lines
+  attr_accessor :world, :menu, :max_lines, :keyword
   attr_reader :view, :console, :bottom
   
   BOTTOM_EPSILON = 20
@@ -82,40 +82,19 @@ class LogController < OSX::NSObject
     moveToBottom if @bottom
   end
   
-  def print(line)
-    keyword = false
-    body = h(line.body)
-    urlrex = /(h?ttps?|ftp):\/\/[-_a-zA-Z0-9.!~*':@%]+((\/[-_a-zA-Z0-9.!~*'%;\/?:@&=+$,#]*[-_a-zA-Z0-9\/?])|\/|)/i
-    body.gsub!(urlrex, '<a href="\0">\0</a>')
-    
-=begin
-    if line.line_type == :privmsg || line.line_type == :action
-      words = ['keyword']
-      words.map! {|i| h(i) }
-      words.each do |w|
-        rex = Regexp.new(w, true)
-        if rex =~ body
-          keyword = true
-          body.gsub!(rex, '<span class="keyword">\0</span>')
-        end
-      end
-      unless @console
-        body.gsub!(/(https?:\/\/[-_.!~*'()a-zA-Z0-9;\/?:\@&=+\$,%#]+\.(jpe?g|gif|png|bmp|tiff))/i, '<img src="\1" title="\1"/>')
-        body.gsub!(/https?:\/\/www\.youtube\.com\/watch\?v=([a-zA-Z]+)/i, '<br/><object width="425" height="350"><param name="movie" value="http://www.youtube.com/v/ljKLoqKOEwE"></param><param name="wmode" value="transparent"></param><embed src="http://www.youtube.com/v/\1" type="application/x-shockwave-flash" wmode="transparent" width="425" height="350"></embed></object><br/><a href="\&">\&</a>')
-      end
-    end
-=end
+  def print(line, use_keyword)
+    body, key = build_body(line, use_keyword)
     
     unless @loaded
-      @lines << line
-      return keyword
+      @lines << [line, use_keyword]
+      return key
     end
     
     s = ''
     s += %Q[<span class="time">#{h(line.time)}</span>] if line.time
     s += %Q[<span class="place">#{h(line.place)}</span>] if line.place
-    s += %Q[<span class="nick_#{h(line.member_type)}">#{h(line.nick)}</span>] if line.nick
-    s += %Q[<span class="#{h(line.line_type)}">#{body}</span>]
+    s += %Q[<span class="nick_#{line.member_type}">#{h(line.nick)}</span>] if line.nick
+    s += %Q[<span class="#{line.line_type}">#{body}</span>]
     attrs = {}
     attrs['class'] = 'line'
     attrs['type'] = line.line_type.to_s
@@ -128,7 +107,7 @@ class LogController < OSX::NSObject
       attrs['nick'] = line.nick_info if line.nick_info
     end
     write(s, attrs)
-    keyword
+    key
   end
   
   # delegate
@@ -142,7 +121,7 @@ class LogController < OSX::NSObject
   
   def webView_didFinishLoadForFrame(sender, frame)
     @loaded = true
-    @lines.each {|i| print(i) }
+    @lines.each {|i| print(*i) }
     @lines.clear
     
     body = @view.mainFrame.DOMDocument.body
@@ -222,6 +201,36 @@ class LogController < OSX::NSObject
   def uh(s)
     s ? CGI.unescapeHTML(s.to_s) : ''
   end
+  
+  def build_body(line, use_keyword)
+    key = false
+    body = h(line.body)
+    urlrex = /(h?ttps?|ftp):\/\/[-_a-zA-Z0-9.!~*':@%]+((\/[-_a-zA-Z0-9.!~*'%;\/?:@&=+$,#]*[-_a-zA-Z0-9\/?])|\/|)/i
+    body.gsub!(urlrex, '<a href="\0">\0</a>')
+
+    if use_keyword
+      if line.line_type == :privmsg || line.line_type == :action
+        words = @keyword.words
+        words.map! {|i| h(i) }
+        words.each do |w|
+          rex = Regexp.new(w, true)
+          if rex =~ body
+            key = true
+            body.gsub!(rex, '<span class="keyword">\0</span>')
+          end
+        end
+      end
+    end
+    
+    [body, key]
+  end
+  
+=begin
+  unless @console
+    body.gsub!(/(https?:\/\/[-_.!~*'()a-zA-Z0-9;\/?:\@&=+\$,%#]+\.(jpe?g|gif|png|bmp|tiff))/i, '<img src="\1" title="\1"/>')
+    body.gsub!(/https?:\/\/www\.youtube\.com\/watch\?v=([a-zA-Z]+)/i, '<br/><object width="425" height="350"><param name="movie" value="http://www.youtube.com/v/ljKLoqKOEwE"></param><param name="wmode" value="transparent"></param><embed src="http://www.youtube.com/v/\1" type="application/x-shockwave-flash" wmode="transparent" width="425" height="350"></embed></object><br/><a href="\&">\&</a>')
+  end
+=end
   
   def initial_doc
     <<-EOM
