@@ -1,5 +1,9 @@
 2007-06-20  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed to use keyword settings.
+
+2007-06-20  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed to use DCC port range.
 	Implemented address detection.
 
